--- a/styles/style.css
+++ b/styles/style.css
@@ -138,19 +138,53 @@ body {
 @media (max-width: 1300px) {
 
     .cabecalho {
-        padding: 8% 0 0 0;
+        padding: 18% 0 0 0;
     }
+
     .cabecalho__menu {
         justify-content: center;
         gap: 10%;
     }
 
+    .cabecalho__menu__link {
+        font-size: 100%;
+    }
+
+    .apresentacao__imagem {
+        width: 85%;
+    }
+
     .apresentacao {
         flex-direction: column-reverse;
-        padding: 5%;
+        padding: 15%;
+        padding-left: 20%;
+        gap: 60px;
+        max-width: 95%;
     }
 
     .apresentacao__conteudo {
         width: 100%;
     }
+
+    .apresentacao__conteudo__titulo {
+        font-size: 1.2rem;
+        padding: 0;
+    }
+
+    .apresentacao__conteudo__texto {
+        font-size: 1.1rem;
+    }
+
+    .apresentacao__links__subtitulo {
+        font-size: 1rem;
+    }
+
+    .apresentacao__links__navegacao {
+        font-size: 0.8rem;
+        align-items: center;
+        padding: 3% 20%;
+        
+    }
+
+    
 }
