--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@ body {
 
     .apresentacao__imagem {
         width: 85%;
-        height: auto;
+        height: 200px;
     }
 
     .apresentacao {
